Fix text-align, selection, responsive

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
     font-size: 0.8em;
 }
 
+::selection {
+    background-color: green;
+    color: #fff;
+}
+
 header, footer {
     padding: 5px 0;
     display: flex;
@@ -39,6 +44,7 @@ main {
 
 .content {
     width: 35%;
+    min-width: 500px;
     height: 100%;
     display: flex;
 }
@@ -57,6 +63,10 @@ main {
     padding-bottom: 10px;
     color: white;
     text-decoration: underline;
+}
+
+.text {
+    text-align: justify;
 }
 
 .l {
